--- a/src/app/Main/style.scss
+++ b/src/app/Main/style.scss
@@ -1,3 +1,14 @@
+@import '~react-toolbox/lib/commons';
+@import "~react-toolbox/components/app_bar/config";
+@import "~react-toolbox/components/button/config";
+
+$offset: 1.8 * $unit;
+
+.app {
+  @include no-webkit-scrollbar;
+  padding: ($appbar-height + 2) $offset $offset;
+}
+
 .appbar {
   justify-content: space-between;
 }
